Fix bacteria image spacing

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -56,7 +56,7 @@
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
-    width: 90%;
+    width: 85%;
     padding: 0;
   }
 }
@@ -598,8 +598,8 @@ a.top {
 }
 
 .researchlogo2 img {
-    width: 220px;
-    padding: 10px 10px 10px 30px;
+    width: 250px;
+    padding: 0 0 0 10px;
 }
 
 .homecontent {
@@ -616,6 +616,21 @@ a.top {
     color: #ffffff;
     text-indent: 10px;
 }
+
+/* Larger than mobile */
+@media (min-width: 300px) {
+    .researchlogo2 img {
+        padding: 0 0 0 0;
+    }
+}
+
+/* Larger than phablet (also point when grid becomes active) */
+@media (min-width: 550px) {
+    .researchlogo2 img {
+            padding: 0 0 0 10px;
+        }
+}
+
 
 /* Profiles */
 
